feat: balance services
